--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.15",
+    "astro-typewriter": "^1.1.0",
     "tailwindcss": "^4.1.18",
     "tsparticles": "^3.9.1"
   },
