--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "aos": "^2.3.4",
     "astro": "^5.16.15",
     "astro-typewriter": "^1.1.0",
     "tailwindcss": "^4.1.18",
