--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "aos": "^2.3.4",
     "astro": "^5.16.15",
     "astro-typewriter": "^1.1.0",
-    "tailwindcss": "^4.1.18",
-    "tsparticles": "^3.9.1"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19"
