--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "astro": "^5.16.15",
     "astro-typewriter": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
